# xlift

./: .env.example  .gitignore  CLAUDE.md  Makefile  ablation.py  metrics_viz.py  predict_vs_actual.py  pyproject.toml  requirements.txt  run_all.sh  run_experiment.py  save_results.sh  score_nogepa.py  setup.sh  train_parallel.sh
data/: load_gsm8k.py
docs/: PITCH_PREP.md
eval/: dashboard.py  visualize.py
metrics/: _throttle.py  anticheat.py  boundary_score.py  gepa_transfer.py  repair_gain.py  reward_length_corr.py  xlift_score.py
models/: backend.py
prompts/: metrics.py
slides/: build_deck.js  xLift_pitch.pptx
tests/: test_cohorts.py  test_flat_e2e.py  test_flat_logic.py  test_metrics.py  test_verify.py
training/: grpo_train.py
xlift/: analyze.py  cli.py  cohorts.py  config.py  data.py  evaluate.py  rollout.py  synth.py  types.py  verify.py
xlift/metrics/: baselines.py  entropy.py  frontier.py  gradnorm.py  reachability.py  reward_length.py  run.py
xlift/train/: backend.py  primerl_backend.py  sweep.py  trl_backend.py
